--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "joplin-plugin-embed-search",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "scripts": {
     "dist": "webpack --joplin-plugin-config buildMain && webpack --joplin-plugin-config buildExtraScripts && webpack --joplin-plugin-config createArchive",
     "prepare": "npm run dist",
     "update": "npm install -g generator-joplin && yo joplin --update",
-    "distrun": "npm run dist && ~/Downloads/Joplin-1.7.4.AppImage --env dev"
+    "distrun": "npm run dist && ~/Downloads/Joplin-1.7.4.AppImage --env dev",
+    "distrun2": "npm run dist && ~/.joplin/Joplin.AppImage --env dev"
   },
   "license": "MIT",
   "keywords": [
