--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "dist": "webpack --joplin-plugin-config buildMain && webpack --joplin-plugin-config buildExtraScripts && webpack --joplin-plugin-config createArchive",
     "prepare": "npm run dist",
     "update": "npm install -g generator-joplin && yo joplin --update",
-    "distrun": "npm run dist && ~/Downloads/Joplin-1.7.4.AppImage --env dev",
-    "distrun2": "npm run dist && ~/.joplin/Joplin.AppImage --env dev"
+    "distrun2": "npm run dist && ~/Downloads/Joplin-1.7.4.AppImage --env dev",
+    "distrun": "npm run dist && ~/.joplin/Joplin.AppImage --env dev"
   },
   "license": "MIT",
   "keywords": [
